# EventSystem

./: CMakeLists.txt  EventDispatcher.hpp  EventGenerator.hpp  EventKeyboardHandler.hpp  EventMouseClickHandler.hpp  EventMouseScrollHandler.hpp  EventStatistics.hpp  EventSysData.hpp  IEvent.hpp  LICENSE  README.md  main_file.cpp
.github/workflows/: cmake.yml
